--- a/evcc/config.yaml
+++ b/evcc/config.yaml
@@ -1,9 +1,9 @@
 ---
-name: evcc
+name: evcc-mobiletto
 version: 0.203.5
-slug: evcc
+slug: evcc-mobiletto
 description: EV Charge Controller!
-url: https://github.com/evcc-io/evcc
+url: https://github.com/MobilettoSoft/evcc_night
 arch: 
   - armhf
   - armv7
